Fix banner content alignment (lg only)

--- a/source/stylesheets/_homepage.scss
+++ b/source/stylesheets/_homepage.scss
@@ -1137,17 +1137,20 @@ h1 {
   }
 
   &__content {
-    width: 50vw;
-    margin-top: 90px;
-    margin-left: 120px;
+    width: 100%;
+    height: 100%;
+    padding-bottom: 100px;
+    padding-left: 120px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
 
     @media all and (max-width: $mobile-width) {
-      width: 100%;
       height: 30vh;
-      margin: 0;
+      padding: 0;
 
-      display: flex;
-      flex-direction: column;
       justify-content: space-around;
       align-items: flex-start;
 
@@ -1180,6 +1183,7 @@ h1 {
     }
 
     h1 {
+      width: clamp(400px, 60vw, 650px);
       font-weight: 800;
       font-size: 38px;
       line-height: 52px;
